# nezumi-zephyr

./: CMakeLists.txt  LICENSE  README.md  app.overlay  prj.conf
src/: coap-client.c  credentials.h
